# rho4

./: .gitignore  CMakeLists.txt  Makefile  imgui.ini  main.cpp
c7/: digitalPot.c  digitalPot.h  makefile  prog.elf  prog.hex  spi.c  spi.h  uart.c
c8/: et_scale.h  makefile  prog.elf  prog.hex  scale.c  square.c
c8-3-3/: abc.c  et_scale.h  makefile  melody.c  prog.elf  prog.hex
c9/: makefile  prog.elf  prog.hex  voltage.c  voltage3.2.c
main/: Makefile  control.c  pid.c
optional/: ADCReader.cpp  AVRSerial.cpp  Makefile  PIDController.hpp  PWMTimer.cpp  PWMTimer.hpp  SerialPort.cpp  SerialPort.hpp  firmware.cpp
